plugins {
    id 'io.spring.dependency-management'
    id 'org.springframework.boot'
    id 'java'
}

group = 'nano'

sourceCompatibility = '16'
targetCompatibility = '16'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // user agent parser
    implementation 'com.github.cbdyzj:ua-parser-module:1.5.5'
    // json path
    implementation 'com.github.cbdyzj:json-path-module:2.4.5'
    // webp
    implementation 'org.sejda.imageio:webp-imageio:0.1.6'
    // javascript
    implementation 'org.graalvm.js:js:21.0.0.2'
    implementation 'org.graalvm.js:js-scriptengine:21.0.0.2'
    // aop
    implementation 'org.aspectj:aspectjweaver:1.9.6'
    // postgresql
    implementation 'org.postgresql:postgresql:42.2.19'
    // spring
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // modules
    implementation project(':common')
    implementation project(':client')
    // test
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}
